fix: remove stale Audio.startBgMusic call, add missing finale-emoji id - stats now working

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   <section id="screen-finale" class="screen">
     <canvas id="confetti-canvas"></canvas>
     <div class="finale-container">
-      <div class="finale-emoji">🎉</div>
+      <div id="finale-emoji" class="finale-emoji">🎉</div>
       <h2 class="finale-title" id="finale-title">Soulmates!</h2>
       <div class="finale-percentage">
         <div id="finale-pct" class="big-pct">0%</div>
