feat: add gradient progress bar showing round progress

--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
       </div>
     </div>
 
+    <!-- Progress bar -->
+    <div class="game-progress-track">
+      <div id="game-progress-bar" class="game-progress-bar"></div>
+    </div>
+
     <div class="split-choices">
       <button id="choice-a" class="choice-panel choice-left" data-choice="A">
         <div class="choice-content">
