fix: full-width Start New Game button

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <input type="range" id="replay-slider" class="styled-slider" min="3" max="10" value="5">
             <span id="replay-round-count" class="round-badge">5</span>
           </div>
-          <button id="btn-start-again" class="primary-btn">Start New Game</button>
+          <button id="btn-start-again" class="primary-btn" style="width:100%">Start New Game</button>
         </div>
         <!-- Player 2 sees a waiting message -->
         <p id="finale-wait-msg" class="waiting-hint" style="display:none">Waiting for host to start a new game...</p>
